# openobserve

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  test_pushing_log.py
terraform/: locals.tf  main.tf  outputs.tf  properties.dev.json  provider.tf  versions.tf
terraform/bootstrap/: main.tf  variables.tf  versions.tf
terraform/modules/alb/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/aurora/: main.tf  outputs.tf  variables.tf
terraform/modules/db-service-account/: README.md  lambda.py  main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs_cluster/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs_cluster/lambda/: scaling_function.py
terraform/modules/nats/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf
terraform/modules/vpc/: README.md  main.tf  outputs.tf  variables.tf
