[project]
name = "iac-openobserve"
version = "0.1.0"
description = ""
authors = [
    {name = "GitLab to Bitbucket Migration",email = "migration@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
